--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -10,7 +10,7 @@ $backgroundColor_dark: #000;
 $breakpoint_mobile: 768px;
 
 @mixin header_light {
-    box-shadow: 0 4px 12px 0 rgba(0,0,0,.05);
+    // box-shadow: 0 4px 12px 0 rgba(0,0,0,.05);
     background: #fff;
 }
 
