implemented rough hero image section

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@ html, body {
     letter-spacing: 0.5px;
     font-size: 18px;
     font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
-    height: 100vh;
+    // height: 100vh;
     margin: 0;
 
     @media (prefers-color-scheme: dark) {
