--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,6 @@
 html, body {
     background-color: $backgroundColor_light;
-    font-size: 18px;
+    font-size: 15px;
     font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
     margin: 0;
 
@@ -10,3 +10,24 @@ html, body {
   }
 
   }
+
+h1 {
+  font-size: 3rem;
+  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-weight: 700;
+  margin: 0;
+}
+
+h2 {
+  font-size: 2rem;
+  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-weight: 700;
+  margin: 0;
+}
+
+h3 {
+  font-size: 1.5rem;
+  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-weight: 600;
+  margin: 0;
+}
