--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,10 +19,13 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
   font-weight: 700;
   margin: 0;
+  @media (min-width: $breakpoint_mobile) {
+    font-size: 3rem;
+  }
 }
 
 h3 {
