--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,14 +13,14 @@ html, body {
 
 h1 {
   font-size: 4rem;
-  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-family: "DM Serif Display", "Source Sans Pro", Arial, sans-serif;
   font-weight: 700;
   margin: 0;
 }
 
 h2 {
   font-size: 1.5rem;
-  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-family: "DM Serif Display", "Source Sans Pro", Arial, sans-serif;
   font-weight: 700;
   margin: 0;
   @media (min-width: $breakpoint_mobile) {
@@ -33,4 +33,8 @@ h3 {
   font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
   font-weight: 600;
   margin: 0;
+}
+
+.font-dm {
+  font-family: "DM Serif Display", serif;
 }
