added skills section

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -5,10 +5,12 @@ $colorGold: #FFC000;
 
 $textColor_light: #000;
 $textColor_dark: #fff;
+$secondaryTextColor: #7C7D82;
 
 $backgroundColor_light: #f7f7f7;
 $backgroundColor_dark: #000;
-$areaColor_dark: #212121;
+$areaColor_dark: #141414;
+$areaColor_light: #fff;
 
 $breakpoint_mobile: 768px;
 
