--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,14 +14,12 @@ html, body {
 h1 {
   font-size: 4rem;
   font-family: "DM Serif Display", "Source Sans Pro", Arial, sans-serif;
-  font-weight: 700;
   margin: 0;
 }
 
 h2 {
   font-size: 1.5rem;
   font-family: "DM Serif Display", "Source Sans Pro", Arial, sans-serif;
-  font-weight: 700;
   margin: 0;
   @media (min-width: $breakpoint_mobile) {
     font-size: 3rem;
@@ -31,7 +29,14 @@ h2 {
 h3 {
   font-size: 1.5rem;
   font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
-  font-weight: 600;
+  font-weight: 500;
+  margin: 0;
+}
+
+h4 {
+  font-size: 1.2rem;
+  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-weight: 500;
   margin: 0;
 }
 
