reworked projects area

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,8 +27,8 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
-  font-family: "Quicksand", "Source Sans Pro", Arial, sans-serif;
+  font-size: 2rem;
+  font-family: "DM Serif Display", "Source Sans Pro", Arial, sans-serif;
   font-weight: 500;
   margin: 0;
 }
